puse el nombre de las variables importantes

--- a/Engho.ipynb
+++ b/Engho.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,13 @@
      "output_type": "stream",
      "text": [
       "Número de filas en el DataFrame: 21547\n",
-      "Número de columnas en el DataFrame: 134\n"
+      "Número de columnas en el DataFrame: 134\n",
+      "Index(['id', 'provincia', 'region', 'subregion', 'trimestre', 'anio',\n",
+      "       'pondera', 'cv1c04', 'cv1c05_a', 'cv1c05_b',\n",
+      "       ...\n",
+      "       'qinth_t', 'dinth_p', 'dinth_r', 'dinth_t', 'qinpch_p', 'qinpch_r',\n",
+      "       'qinpch_t', 'dinpch_p', 'dinpch_r', 'dinpch_t'],\n",
+      "      dtype='object', length=134)\n"
      ]
     }
    ],
@@ -47,13 +53,20 @@
     "\n",
     "print(\"Número de filas en el DataFrame:\", len(ENGHO))\n",
     "print(\"Número de columnas en el DataFrame:\", len(ENGHO.columns))\n",
+    "print(ENGHO.columns)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Las variables que nos piden a tener en cuenta son:\n",
+    "Gasto percapita del hogar: \"gastotpc\" \n",
+    "Ingreso percapita del hogar: \"ingpch\"\n",
+    "Factor de expansion: \"pondera\"\n",
+    "La idea es explicar la primer variable. Por lo menos con las otras. Puede ser para nea, o a nivel provincias\n"
+   ]
   }
  ],
  "metadata": {
