--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -37,7 +37,7 @@
    "id": "b33bb118",
    "metadata": {},
    "source": [
-    "En este apartado se pueden ver las librerias que utilizamos"
+    "En este apartado se pueden ver las bibliotecas que utilizamos para desarrollar el estudio."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "id": "f945a95c",
    "metadata": {},
    "source": [
-    "En este apartado podemos verificar las diferentes bibliotecas que utilizamos para desarrollar el OLS."
+    "Obtenemos la Encuesta nacional de gastos de los hogares directamente desde la pagina del INDEC, como el archivo viene por defecto dentro de un archivo .ZIP debemos extraer el archivo y declarar de que se trata de un archivo .txt"
    ]
   },
   {
@@ -92,9 +92,7 @@
    "cell_type": "markdown",
    "id": "b31d6577",
    "metadata": {},
-   "source": [
-    "Obtenemos la Encuesta nacional de gastos de los hogares directamente desde la pagina del INDEC, como el archivo viene por defecto dentro de un archivo .ZIP debemos extraer el archivo y declarar de que se trata de un archivo .txt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "60f9d9ef",
    "metadata": {},
    "outputs": [],
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "f2404d9a",
    "metadata": {},
    "outputs": [],
@@ -222,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "48997e90",
    "metadata": {},
    "outputs": [],
@@ -247,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "caf78b6f",
    "metadata": {},
    "outputs": [],
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "968930e6",
    "metadata": {},
    "outputs": [
@@ -291,7 +289,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.371\n",
       "Method:                 Least Squares   F-statistic:                     161.1\n",
       "Date:                Tue, 23 Jul 2024   Prob (F-statistic):          1.04e-265\n",
-      "Time:                        21:44:14   Log-Likelihood:                -26131.\n",
+      "Time:                        21:53:56   Log-Likelihood:                -26131.\n",
       "No. Observations:                2714   AIC:                         5.228e+04\n",
       "Df Residuals:                    2703   BIC:                         5.235e+04\n",
       "Df Model:                          10                                         \n",
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "fd3f4dbe",
    "metadata": {},
    "outputs": [
