--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -92,7 +92,9 @@
    "cell_type": "markdown",
    "id": "b31d6577",
    "metadata": {},
-   "source": []
+   "source": [
+    "En esta seccion del codigo nos dedicamos a agrupar diferentes variables que consideramos importantes para determinar el gasto percapita de los hogares.\n"
+   ]
   },
   {
    "cell_type": "code",
