--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -93,7 +93,16 @@
    "id": "b31d6577",
    "metadata": {},
    "source": [
-    "En esta seccion del codigo nos dedicamos a agrupar diferentes variables que consideramos importantes para determinar el gasto percapita de los hogares.\n"
+    "En esta seccion del codigo nos dedicamos a agrupar diferentes variables que consideramos importantes para determinar el gasto percapita de los hogares. \n",
+    "* Filtramos por NEA.\n",
+    "* Expandimos las variables Ingreso percapita y Gasto percapita.\n",
+    "* Creamos la variable de Ingreso percapita al cuadrado.\n",
+    "* Reagrupamos la variable de si es propietario de un vehiculo o no. \n",
+    "* Regimen de tenencia del hogar las agrupamos en una binaria\n",
+    "* Agrupamos el nivel educativo del jefe de hogar en 3 dummies\n",
+    "* Agrupamos la edad del jefe del hogar en 3 dummies\n",
+    "* Agrupamos el estado civil del jefe de hogar en una dummie\n",
+    "\n"
    ]
   },
   {
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "60f9d9ef",
    "metadata": {},
    "outputs": [],
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "caf78b6f",
    "metadata": {},
    "outputs": [],
