--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -102,7 +102,9 @@
     "* Agrupamos el nivel educativo del jefe de hogar en 3 dummies\n",
     "* Agrupamos la edad del jefe del hogar en 3 dummies\n",
     "* Agrupamos el estado civil del jefe de hogar en una dummie\n",
-    "\n"
+    "* Creamos una dummie binaria para ver el estado de ocupado o no del jefe del hogar\n",
+    "* Tambien creamos 5 dummies que representen la situacion del jefe de familia sobre sus aportes(asalariado, cuantapropista, etc)\n",
+    "* Por ultimo agrupamos Clima Educativo del hogar."
    ]
   },
   {
@@ -177,7 +179,9 @@
    "cell_type": "markdown",
    "id": "13069558",
    "metadata": {},
-   "source": []
+   "source": [
+    "En esta parte definimos los metodos de los graficos que haremos mas adelante"
+   ]
   },
   {
    "cell_type": "code",
@@ -193,24 +197,8 @@
     "    plt.xlabel('Gasto')\n",
     "    plt.ylabel('Frecuencia')\n",
     "    plt.grid(True)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "63eb9341",
-   "metadata": {},
-   "source": [
-    "Definir el proposito de este grafico"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f2404d9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "\n",
     "def plot_histograma_gasto_percapita(df):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.hist(df['gastotpc'], bins=30, color='skyblue', edgecolor='black')\n",
@@ -218,24 +206,8 @@
     "    plt.xlabel('Log del Gasto per capita')\n",
     "    plt.ylabel('Frecuencia')\n",
     "    plt.grid(True)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2539259e",
-   "metadata": {},
-   "source": [
-    "Definir el proposito de este grafico"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "48997e90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "\n",
     "def plot_histograma_ingpch(df):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.hist(df['ingpch'], bins=30, color='lightgreen', edgecolor='black')\n",
@@ -243,24 +215,8 @@
     "    plt.xlabel('Log del Ingreso per Cápita')\n",
     "    plt.ylabel('Frecuencia')\n",
     "    plt.grid(True)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d26a178",
-   "metadata": {},
-   "source": [
-    "Definir el proposito de este grafico"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "caf78b6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "\n",
     "def plot_bar_gasto_educacion(df):\n",
     "    gasto_promedio_educacion = df.groupby(['prim', 'sec', 'univ'])['gasto'].mean().reset_index()\n",
     "    gasto_promedio_educacion['Educación'] = gasto_promedio_educacion.apply(\n",
@@ -273,7 +229,8 @@
     "    plt.xlabel('Nivel de Educación')\n",
     "    plt.ylabel('Gasto Promedio')\n",
     "    plt.grid(True)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n"
    ]
   },
   {
