--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -104,7 +104,7 @@
     "* Agrupamos el estado civil del jefe de hogar en una dummie\n",
     "* Creamos una dummie binaria para ver el estado de ocupado o no del jefe del hogar\n",
     "* Tambien creamos 5 dummies que representen la situacion del jefe de familia sobre sus aportes(asalariado, cuantapropista, etc)\n",
-    "* Por ultimo agrupamos Clima Educativo del hogar."
+    "* Por ultimo agrupamos Clima Educativo del hogar.\n"
    ]
   },
   {
