--- a/ENGHO Notebook.ipynb
+++ b/ENGHO Notebook.ipynb
@@ -238,7 +238,8 @@
    "id": "63a5b2fa",
    "metadata": {},
    "source": [
-    "Definir el proposito de este grafico"
+    "En esta parte realizamos la regresion lineal multiple, nuestra variable objetivo es gasto del hogar per capita \"gastotpc\".\n",
+    "Despues de varias regresiones nos quedamos con aquellas variables significativas."
    ]
   },
   {
@@ -317,6 +318,16 @@
     "    #plot_histograma_ingpch(fdata_nea)\n",
     "    #plot_bar_gasto_educacion(fdata_nea)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d22a4adf",
+   "metadata": {},
+   "source": [
+    "Las variables Significativas fueron.\n",
+    "Ingreso percapita que fue expandido con el factor \"pondera\". Con un coeficiente de 0.41 y un p valor de 0\n",
+    "Ingreso percapita al cuadrado. Con esta variable quisimos capturar el efecto cuadratico que podia existir en la relacion entre ingreso y gasto. "
    ]
   },
   {
